tests/files/invalid_files/ruleset_missing_rules.ys
schema {
    message str
    details Details
}

ruleset Details {}
